--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Kanit', sans-serif;
     background-color: #f4f4f4;
     margin: 0;
     padding: 20px;
@@ -16,6 +16,7 @@ body {
 
 h1, h2 {
     text-align: center;
+    font-weight: 400;
 }
 
 form {
